# POV-Teleop-Simulator

./: .gitignore  IMPLEMENTATION-PLAN.md  NEXTJS-TRON-WRAPPER-PLAN.md  PLAN-DAMIAN.md  PLAN-GRIFFIN.md  PLAN-JADEN.md  PLAN-MASTER.md  PLAN-TORRIN.md  README.md  RESEARCH.md  feedback.md  pyproject.toml  requirements.txt  setup.sh
backend/: pipeline.py  requirements.txt  server.py
docs/specs/: interface_contracts.md
docs/workflow/: hackathon_sprint.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Dashboard.tsx  MjpegStream.tsx  NeonPanel.tsx  StatusBar.tsx  StreamPanel.tsx
frontend/src/hooks/: useTeleopState.ts
live/: __init__.py  calibrate.py  convert.py  display.py  main.py  robot.py  test_joints.py
research/: egocentric-vision.md  pose-estimation-comparison.md  related-projects.md  so-arm101-specs.md
src/: __init__.py  camera.py  config.py  display.py  main.py  mapping.py  pose.py  sim.py  smoother.py
