[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pov-teleop-simulator"
version = "0.1.0"
description = "Control a simulated SO-ARM101 robotic arm using a body-mounted camera and computer vision."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "POV Teleop Team" }
]
keywords = ["robotics", "teleoperation", "mediapipe", "gym-soarm", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "mediapipe>=0.10.32",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "gym-soarm>=0.4.0",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
